# formatstruct

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-test.yml
src/: _clang-format  formatstruct.h
tests/: UnitTest.h  formatstruct-test.cpp
